platform/policies/tests/protect-tenant-resourcequota/delete-while-namespace-terminating/userinfo.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: namespace-controller
userInfo:
  username: "system:serviceaccount:kube-system:namespace-controller"
  groups:
    - system:serviceaccounts
    - system:serviceaccounts:kube-system
